fix: make overflow scrollable

--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -157,3 +157,17 @@ select
 .implication-list
   margin-left: 20px
   list-style-type: circle
+
+.scrollable-box
+  width: 750px
+  overflow: scroll
+  text-overflow: clip
+  height: 50px
+  padding: 9.5px
+  margin: 0 0 10px
+  font-size: 13px
+  line-height: 1.42857143
+  color: #333
+  background-color: #f5f5f5
+  border: 1px solid #ccc
+  border-radius: 4px
